refactor: 优化一下代码